finish basic test suite and fix proper track shares handling